progs/cpp/1ec9c0c7-1ded-436f-996f-9621f24be440/err.txt
progs/cpp/1ec9c0c7-1ded-436f-996f-9621f24be440/prog.cpp:6:14: warning: missing terminating " character [enabled by default]
       cout <<";
              ^
progs/cpp/1ec9c0c7-1ded-436f-996f-9621f24be440/prog.cpp:6:7: error: missing terminating " character
       cout <<";
       ^
progs/cpp/1ec9c0c7-1ded-436f-996f-9621f24be440/prog.cpp: In function ‘int main()’:
progs/cpp/1ec9c0c7-1ded-436f-996f-9621f24be440/prog.cpp:7:7: error: expected primary-expression before ‘return’
       return 0;
       ^
progs/cpp/1ec9c0c7-1ded-436f-996f-9621f24be440/prog.cpp:7:7: error: expected ‘;’ before ‘return’
